--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/webshop_terminal
-spring.datasource.username=db_admin
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/webshop_dev
+spring.datasource.username=webshop_user
 spring.datasource.password=Start123$
