--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/webshop_dev
 spring.datasource.username=webshop_user
 spring.datasource.password=Start123$
+
+server.error.include-message=always
