--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=webshop_user
 spring.datasource.password=Start123$
 
 server.error.include-message=always
+server.error.include-binding-errors=always
